fix: fix toy scrolling on mobiles 2

--- a/src/components/selectors/selector-toys/selector-toys.scss
+++ b/src/components/selectors/selector-toys/selector-toys.scss
@@ -25,7 +25,7 @@
   @media screen and (max-width: 991px) {
     grid-template-columns: repeat(2, max-content);
     max-height: 17em;
-    padding: 0 1.5em;
+    padding: 0 3em;
   }
   @media screen and (max-width: 600px) {
     grid-template-columns: repeat(1, max-content);
